# swagger.json
@@ -35,6 +35,10 @@
         {
             "name": "cupon-controller",
             "description": "Cupon Controller"
+        },
+        {
+            "name": "tienda-controller",
+            "description": "Tienda Controller"
         }
     ],
     "paths": {
@@ -1030,6 +1034,95 @@
                 }
             }
         },
+        "/api/tiendas/listartiendas?query={nombre}&page={page}&pageSize={pageSize}": {
+            "get": {
+                "tags": [
+                    "tienda-controller"
+                ],
+                "operationId": "getTiendasUsingGET",
+                "summary": "Get tienda / tiendas",
+                "consumes": [
+                    "application/json"
+                ],
+                "description": "Fetch al Tienda basado en el parametro. \"20% de dscto\" para unos o \"all\" para traer todos los tiendas.",
+                "parameters": [
+                    {
+                        "name": "nombre",
+                        "required": false,
+                        "in": "path",
+                        "type": "string",
+                        "description": "Sumilla o Descripción del cupon"
+                    },{
+                        "name": "page",
+                        "required": false,
+                        "in": "path",
+                        "type": "integer",
+                        "description": "Pagina solicitada"
+                    },{
+                        "name": "pageSize",
+                        "required": false,
+                        "in": "path",
+                        "type": "integer",
+                        "description": "Tamanio de pagina solicitada"
+                    },{
+                        "in": "header",
+                        "name": "authorization",
+                        "description": "Access Token JWT",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVC..."
+                        }
+                    },
+                    {
+                        "in": "header",
+                        "name": "refresh-token",
+                        "description": "Refresh Token",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVC..."
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "schema": {
+                            "$ref": "#/definitions/Tienda"
+                        },
+                        "description": "A JSON array of user information"
+                    },
+                    "400": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "statusCode": {
+                                    "type": "integer", "example": 400
+                                },
+                                "message": {
+                                    "type": "string", "example": "Invalid request body"
+                                }
+                            }
+                        },
+                        "description": "Bad Request"
+                    },
+                    "409": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "statusCode": {
+                                    "type": "integer", "example": 409
+                                },
+                                "message": {
+                                    "type": "string", "example": "Requested item wasn't found!"
+                                }
+                            }
+                        },
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/api/cupones/listarcuponescliente?query={sumilladescrip}&page={page}&pageSize={pageSize}&categoria={categoria}": {
             "get": {
                 "tags": [
@@ -1724,6 +1817,71 @@
                 "updatedAt": {
                     "type":"string",
                     "example": "2022-09-19T09:03:46.865Z"
+                }
+            }
+        },
+        "Tienda": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64",
+                    "example": 1
+                },
+                "fidCategoriaTienda": {
+                    "type": "integer",
+                    "format": "int64",
+                    "example": 2
+                },
+                "nombre": {
+                    "type": "string",
+                    "example": "Chung Chun"
+                },
+                "descripcion": {
+                    "type": "string",
+                    "example": "Venta de corndogs"
+                },
+                "locacion": {
+                    "type": "string",
+                    "example": "Primera planta"
+                },
+                "horaApertura": {
+                    "type":"string",
+                    "example": "10:00:00"
+                },
+                "horaCierre": {
+                    "type": "string",
+                    "example": "20:00:00"
+                },
+                "aforo": {
+                    "type": "integer",
+                    "format": "int64",
+                    "example": 100
+                },
+                "rutaFoto": {
+                    "type": "string",
+                    "example": "www.vsda"
+                },
+                "activo": {
+                    "type": "integer",
+                    "format": "int64",
+                    "example": 1
+                },
+                "createdAT": {
+                    "type":"string",
+                    "example": "2022-09-19T09:03:45.281Z"
+                },
+                "updatedAt": {
+                    "type":"string",
+                    "example": "2022-09-19T09:03:46.865Z"
+                },
+                "usuarioCreacion": {
+                    "type":"string",
+                    "example": "Diego Damian"
+                },
+                "usuarioActualizacion": {
+                    "type":"string",
+                    "example": "Diego Damian"
                 }
             }
         },
